<resources>
    <string name="app_name">BicycleApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_display_data">Display Data</string>
    <string name="title_activity_part_detail">Part Detail</string>
    <string name="Part_name">Principles of Interface Design &amp; User Experience</string>
    <!--<string name="action_display_detail">Display Detail</string>-->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="Serial_number">Serial #: 10101</string>
    <string name="rate">Rating</string>
    <string name="Bike">Bicycle Help</string>
    <string name="Bike_details">Bike Catalog</string>
    <string name="Bikes">Bicycle</string>
    <string name="watch">Watch Video</string>
    <string name="about_headline">Company History</string>
    <string name="about_test">Bicycle Help. and its subsidiaries,together Rodale, is an independent healthy, happy living company, publishing some of the largest, most established health and wellness lifestyle brands including Prevention, Mens Health, Womens Health, Runners World, Running Times, Bicycling, and Rodales Organic Life, and is one of the largest independent book publishers in the Finland. Rodale brings you the ideas, insights, and information that inspire health, healing, happiness and love in the world. Starting with you.</string>
    <string name="title_activity_about_page">AboutPage</string>
    <string name="Aboutp">ABOUT PAGE</string>
    <string name="enter_your_password_here">Enter your password here</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="action_logout">Logout</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="login_error_title">Error!</string>
    <string name="login_error_message">Please enter correct email address and password!</string>
    <string name="registration_error_title">Error!</string>
    <string name="registration_error_message">Please make sure you enter an email address and password!</string>
    <string name="registration_success">Account successfully created! You can now Login.</string>



</resources>
