<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <!--<item android:id="@+id/action_display_detail"
        android:orderInCategory="101"
        android:title="@string/action_display_detail"
        app:showAsAction="never"/>-->
    <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:title="@string/about"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="102"
        android:title="@string/contact"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="103"
        android:title="@string/action_logout"
        app:showAsAction="never"/>
        />


</menu>
